# smart-locale-search

./: .gitignore  LICENSE  README.md  README.ru.md  ROADMAP.md
.github/workflows/: release.yml
core/: README.md
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: indexing.rs  mod.rs  model.rs  search.rs  settings.rs
desktop/src-tauri/src/db/: migrations.rs  mod.rs  repository.rs
desktop/src-tauri/src/embedding/: clip.rs  e5_small.rs  mod.rs
desktop/src-tauri/src/indexing/: chunker.rs  code_chunker.rs  config.rs  defaults.rs  extractor.rs  mod.rs  pipeline.rs  scanner.rs
desktop/src-tauri/src/indexing/extractors/: csv_ext.rs  docx.rs  mod.rs  ocr.rs  pdf.rs  plaintext.rs  xlsx.rs
desktop/src-tauri/src/model_manager/: mod.rs
desktop/src-tauri/src/models/: file.rs  mod.rs  search.rs  settings.rs
desktop/src-tauri/src/search/: filename.rs  fulltext.rs  fuzzy.rs  image_semantic.rs  mod.rs  ranker.rs  semantic.rs
desktop/src/components/: FileIcon.tsx  IndexStatus.tsx  IndexedLocations.tsx  IndexingPanel.tsx  Layout.tsx  ModelBanner.tsx  ModelManagement.tsx  ResultItem.tsx  ResultList.tsx  SearchBar.tsx  Settings.tsx  SnippetPreview.tsx
desktop/src/hooks/: useIndexedLocations.ts  useIndexing.ts  useKeyboard.ts  useModelManager.ts  useSearch.ts  useSettings.ts
desktop/src/lib/: tauri.ts  types.ts
desktop/src/styles/: globals.css
docs/: architecture.md
