[package]
name = "smart-local-search"
version = "0.1.0"
description = "Privacy-first local AI search engine"
authors = ["Smart Local Search Contributors"]
license = "MIT"
repository = "https://github.com/nicholasgriffintn/smart-local-search"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.8"
docx-rs = "0.4"
csv = "1.3"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
tokenizers = "0.20"
thiserror = "2"
rayon = "1.10"
open = "5"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "6"
calamine = "0.26"
regex = "1"
image = "0.25"
base64 = "0.22"
